--- a/css/index.css
+++ b/css/index.css
@@ -252,7 +252,8 @@ body {
       position: absolute;
       opacity: .6;
       top: 45%;
-      z-index: 11; }
+      z-index: 11;
+      display: none; }
       body #hero-nav .arrow:hover {
         opacity: 1;
         cursor: pointer; }
@@ -261,6 +262,7 @@ body {
     body #hero-nav #right-arrow {
       right: 10; }
     body #hero-nav #pagination-container {
+      display: none;
       width: 110px;
       height: 12px;
       position: absolute;
