--- a/css/index.css
+++ b/css/index.css
@@ -297,7 +297,7 @@ body {
     body #story-stream #search {
       width: 100%;
       height: 50px;
-      background: rgba(255, 255, 255, 0.95);
+      background: white;
       z-index: 1100; }
       body #story-stream #search.stuck {
         position: fixed;
