--- a/css/index.css
+++ b/css/index.css
@@ -46,8 +46,13 @@ body {
   border-top: 1px solid #e8e8e8; }
 
 #menu-bar {
+  -webkit-transition: all 0.25s ease;
+  -moz-transition: all 0.25s ease;
+  -ms-transition: all 0.25s ease;
+  -o-transition: all 0.25s ease;
+  transition: all 0.25s ease;
   width: 100%;
-  height: 75px;
+  height: 75px !important;
   background: rgba(255, 255, 255, 0.95);
   position: fixed;
   top: 0;
@@ -56,6 +61,8 @@ body {
   -moz-box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.2);
   -webkit-box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.2);
   box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.2); }
+  #menu-bar.expanded {
+    height: 145px; }
   #menu-bar #logo-container {
     margin-top: 15px;
     margin-left: 30px;
@@ -141,6 +148,81 @@ body {
         font-weight: normal;
         color: #686868; }
 
+.menu-dropdown {
+  -webkit-transition: all 0.25s ease;
+  -moz-transition: all 0.25s ease;
+  -ms-transition: all 0.25s ease;
+  -o-transition: all 0.25s ease;
+  transition: all 0.25s ease;
+  width: 100%;
+  height: 70px;
+  background: rgba(255, 255, 255, 0.95);
+  position: fixed;
+  top: 76;
+  padding: 0;
+  list-style-type: none;
+  white-space: nowrap;
+  overflow-y: hidden;
+  overflow-x: scroll; }
+  .menu-dropdown.hidden {
+    height: 0px; }
+  .menu-dropdown .logo-dropdown {
+    width: 100%;
+    height: 100%;
+    display: inline-block;
+    list-style-type: none;
+    padding: 0;
+    margin: 0; }
+    .menu-dropdown .logo-dropdown li {
+      display: inline-block;
+      height: 70px;
+      width: 210px;
+      margin-left: auto;
+      margin-right: auto;
+      border-bottom: 1px solid #f4f4f4;
+      font-family: BariolThin;
+      font-size: 25pt;
+      color: #6d6e71;
+      padding-left: 20px;
+      padding-right: 20px; }
+      .menu-dropdown .logo-dropdown li:hover {
+        background: #fa4b2a;
+        color: white;
+        cursor: pointer; }
+      .menu-dropdown .logo-dropdown li:hover > #football {
+        background: url("../img/search/footballw.png") center;
+        background-size: cover; }
+      .menu-dropdown .logo-dropdown li:hover > .dropdown-sport-logo {
+        opacity: 1;
+        cursor: pointer;
+        -webkit-transform: rotateZ(90deg) scale(1.2);
+        -moz-transform: rotateZ(90deg) scale(1.2);
+        -ms-transform: rotateZ(90deg) scale(1.2);
+        -o-transform: rotateZ(90deg) scale(1.2);
+        transform: rotateZ(90deg) scale(1.2); }
+      .menu-dropdown .logo-dropdown li .dropdown-sport-logo {
+        -webkit-transition: all 0.25s ease;
+        -moz-transition: all 0.25s ease;
+        -ms-transition: all 0.25s ease;
+        -o-transition: all 0.25s ease;
+        transition: all 0.25s ease;
+        display: inline-block;
+        position: absolute;
+        width: 18px;
+        height: 18px;
+        margin-left: 10px;
+        margin-top: 30px;
+        -webkit-transform: rotateZ(0deg) scale(1);
+        -moz-transform: rotateZ(0deg) scale(1);
+        -ms-transform: rotateZ(0deg) scale(1);
+        -o-transform: rotateZ(0deg) scale(1);
+        transform: rotateZ(0deg) scale(1); }
+      .menu-dropdown .logo-dropdown li .dropdown-sport-title {
+        margin-top: 20px;
+        margin-left: 40px;
+        display: inline-block;
+        text-align: center; }
+
 #menu-bar-spacer {
   width: 100%;
   height: 75px;
@@ -166,6 +248,35 @@ body {
 
 .text-blue {
   color: #47bee2; }
+
+#soccer {
+  background: url("../img/search/soccer.png") center;
+  background-size: cover; }
+
+#basketball {
+  background: url("../img/search/basketball.png") center;
+  background-size: cover; }
+
+#football {
+  background: url("../img/search/football.png") center;
+  background-size: cover; }
+
+#baseball {
+  background: url("../img/search/baseball.png") center;
+  background-size: cover; }
+
+#hockey {
+  background: url("../img/search/hockey.png") center;
+  background-size: cover; }
+
+#golf {
+  background: url("../img/search/golf.png") center;
+  background-size: cover; }
+
+#swimming {
+  background: url("../img/search/swimming.png") center;
+  background-size: cover;
+  margin-right: 0; }
 
 body {
   background: #ffffff;
@@ -201,7 +312,7 @@ body {
     width: 100%;
     height: 500px;
     background: #000;
-    position: absolute;
+    position: fixed;
     z-index: 1;
     overflow-x: hidden; }
     body #hero-nav #hero-container .story {
