--- a/css/index.scss
+++ b/css/index.scss
@@ -37,7 +37,7 @@ body {
 		width: 100%;
 		height: 500px;
 		background: #000;
-		position: absolute;
+		position: fixed;
 		z-index: 1;
 		overflow-x: hidden;
 
