--- a/css/player.css
+++ b/css/player.css
@@ -29,7 +29,8 @@
 body {
   font-family: 'Bariol';
   font-weight: normal;
-  margin: 0; }
+  margin: 0;
+  min-width: 730px; }
 
 .visible {
   display: block; }
