--- a/css/index.css
+++ b/css/index.css
@@ -535,43 +535,55 @@ body {
           background-size: cover;
           background-repeat: no-repeat; }
         body #story-stream #stories #story-grid #block-story-2 {
-          background: url("../img/blocks/2.jpg");
+          background: url("../img/blocks/2.jpg") center;
           background-size: cover;
           background-repeat: no-repeat; }
         body #story-stream #stories #story-grid #block-story-3 {
-          background: url("../img/blocks/3.jpg");
+          background: url("../img/blocks/3.jpg") center;
           background-size: cover;
           background-repeat: no-repeat; }
         body #story-stream #stories #story-grid #block-story-4 {
-          background: url("../img/blocks/4.jpg");
+          background: url("../img/blocks/4.jpg") center;
           background-size: cover;
           background-repeat: no-repeat; }
         body #story-stream #stories #story-grid #block-story-5 {
-          background: url("../img/blocks/5.jpg");
+          background: url("../img/blocks/5.jpg") center;
           background-size: cover;
           background-repeat: no-repeat; }
         body #story-stream #stories #story-grid #block-story-5 {
-          background: url("../img/blocks/5.jpg");
+          background: url("../img/blocks/5.jpg") center;
           background-size: cover;
           background-repeat: no-repeat; }
         body #story-stream #stories #story-grid #block-story-6 {
-          background: url("../img/blocks/6.jpg");
+          background: url("../img/blocks/6.jpg") center;
           background-size: cover;
           background-repeat: no-repeat; }
         body #story-stream #stories #story-grid #block-story-7 {
-          background: url("../img/blocks/7.jpg");
+          background: url("../img/blocks/7.jpg") center;
           background-size: cover;
           background-repeat: no-repeat; }
         body #story-stream #stories #story-grid #block-story-8 {
-          background: url("../img/blocks/8.jpg");
+          background: url("../img/blocks/8.jpg") center;
           background-size: cover;
           background-repeat: no-repeat; }
         body #story-stream #stories #story-grid #block-story-9 {
-          background: url("../img/blocks/9.jpg");
+          background: url("../img/blocks/9.jpg") center;
           background-size: cover;
           background-repeat: no-repeat; }
         body #story-stream #stories #story-grid #block-story-10 {
-          background: url("../img/blocks/5.jpg");
+          background: url("../img/blocks/10.jpg") center;
+          background-size: cover;
+          background-repeat: no-repeat; }
+        body #story-stream #stories #story-grid #block-story-11 {
+          background: url("../img/blocks/11.jpg") center;
+          background-size: cover;
+          background-repeat: no-repeat; }
+        body #story-stream #stories #story-grid #block-story-12 {
+          background: url("../img/blocks/12.jpg") center;
+          background-size: cover;
+          background-repeat: no-repeat; }
+        body #story-stream #stories #story-grid #block-ad {
+          background: url("../img/blocks/ad.jpg") center;
           background-size: cover;
           background-repeat: no-repeat; }
         body #story-stream #stories #story-grid .story-block {
@@ -631,8 +643,22 @@ body {
             left: 0;
             z-index: 11; }
             body #story-stream #stories #story-grid .story-block .block-category .block-category-icon {
+              -webkit-transition: all 0.25s ease;
+              -moz-transition: all 0.25s ease;
+              -ms-transition: all 0.25s ease;
+              -o-transition: all 0.25s ease;
+              transition: all 0.25s ease;
               width: 20px;
               height: 20px;
+              margin-top: 10px;
+              margin-left: 10px;
+              margin-right: auto; }
+            body #story-stream #stories #story-grid .story-block .block-category .block-category-ad {
+              -webkit-transition: all 0.25s ease;
+              -moz-transition: all 0.25s ease;
+              -ms-transition: all 0.25s ease;
+              -o-transition: all 0.25s ease;
+              transition: all 0.25s ease;
               margin-top: 10px;
               margin-left: 10px;
               margin-right: auto; }
@@ -648,6 +674,8 @@ body {
             width: 100%; }
           body #story-stream #stories #story-grid .story-block:hover > .block-category > .block-category-icon {
             margin-left: auto; }
+          body #story-stream #stories #story-grid .story-block:hover > .block-category > .block-category-ad {
+            text-align: center; }
           body #story-stream #stories #story-grid .story-block.block-hidden {
             width: 0px;
             height: 0px; }
