--- a/css/article.css
+++ b/css/article.css
@@ -272,6 +272,13 @@ body {
   height: 75px;
   position: relative; }
 
+.footer {
+  position: relative;
+  bottom: 0;
+  width: 100%;
+  height: 100px;
+  background: white; }
+
 .text-white {
   color: white; }
 
