fixed menu-bar animation

--- a/css/index.scss
+++ b/css/index.scss
@@ -416,7 +416,7 @@ body {
 					}
 
 					&:hover > .block-category >.block-category-icon {
-						margin-left: auto;
+						margin-left: 135px;
 					}
 
 					&:hover > .block-category >.block-category-ad {
