--- a/css/global.scss
+++ b/css/global.scss
@@ -193,13 +193,14 @@ body {
 #menu-bar {
     @include transition(all .25s ease);
     width: 100%;
-    height: 75px !important;
+    height: 75px;
     background: rgba(255, 255, 255, 0.95);
     position: fixed;
     top: 0;
     z-index: 1000;
     border-bottom: 1px solid lighten($lightgray, 30%);
     @include box-shadow(0px 1px 4px rgba(0,0,0,.2));
+    overflow: hidden;
 
     &.expanded {
         height: 145px;
@@ -356,7 +357,6 @@ body {
     @include transition(all .25s ease);
     width: 100%;
     height: 70px;
-    background: rgba(255, 255, 255, 0.95);
     position: fixed;
     top: 76;
     padding: 0;
@@ -364,10 +364,6 @@ body {
     white-space: nowrap;
     overflow-y: hidden;
     overflow-x: scroll;
-
-    &.hidden {
-        height: 0px;
-    }
 
     .logo-dropdown {
         width: 100%;
