--- a/css/index.css
+++ b/css/index.css
@@ -53,7 +53,7 @@ body {
   -o-transition: all 0.25s ease;
   transition: all 0.25s ease;
   width: 100%;
-  height: 75px !important;
+  height: 75px;
   background: rgba(255, 255, 255, 0.95);
   position: fixed;
   top: 0;
@@ -61,7 +61,8 @@ body {
   border-bottom: 1px solid #e8e8e8;
   -moz-box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.2);
   -webkit-box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.2);
-  box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.2); }
+  box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.2);
+  overflow: hidden; }
   #menu-bar.expanded {
     height: 145px; }
   #menu-bar #logo-container {
@@ -200,7 +201,6 @@ body {
   transition: all 0.25s ease;
   width: 100%;
   height: 70px;
-  background: rgba(255, 255, 255, 0.95);
   position: fixed;
   top: 76;
   padding: 0;
@@ -208,8 +208,6 @@ body {
   white-space: nowrap;
   overflow-y: hidden;
   overflow-x: scroll; }
-  .menu-dropdown.hidden {
-    height: 0px; }
   .menu-dropdown .logo-dropdown {
     width: 100%;
     height: 100%;
@@ -680,7 +678,7 @@ body {
           body #story-stream #stories #story-grid .story-block:hover > .block-category {
             width: 100%; }
           body #story-stream #stories #story-grid .story-block:hover > .block-category > .block-category-icon {
-            margin-left: auto; }
+            margin-left: 135px; }
           body #story-stream #stories #story-grid .story-block:hover > .block-category > .block-category-ad {
             text-align: center; }
           body #story-stream #stories #story-grid .story-block.block-hidden {
